crates/rome_js_formatter/tests/specs/prettier/js/arrows-bind/arrows-bind.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\arrows-bind\\arrows-bind.js"
---

# Input

```js
a => ({}::b()``[''].c++ && 0 ? 0 : 0);
(a => b)::c;
a::(b => c);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,6 @@
-(a) => ({}::b()``[""].c++ && 0 ? 0 : 0);
-((a) => b)::c;
-a::((b) => c);
+a => ({}
+::b()``[''].c++ && 0 ? 0 : 0)
+(a) => b;
+::c
+a:
+:(b => c)
```

# Output

```js
a => ({}
::b()``[''].c++ && 0 ? 0 : 0)
(a) => b;
::c
a:
:(b => c)
```


# Errors
```
arrows-bind.js:1:9 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `:`
  
  × unexpected
  
    ┌─ arrows-bind.js:1:9
    │
  1 │ a => ({}::b()``[''].c++ && 0 ? 0 : 0);
    │         ^
  
arrows-bind.js:2:9 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ arrows-bind.js:2:9
    │
  2 │ (a => b)::c;
    │         ^
  
  i ...Which is required to end this statement
  
    ┌─ arrows-bind.js:2:1
    │
  2 │ (a => b)::c;
    │ ^^^^^^^^^
  
arrows-bind.js:3:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found ':'
  
  × Expected a statement here
  
    ┌─ arrows-bind.js:3:3
    │
  3 │ a::(b => c);
    │   ^
  

```


